# UWRT-Ros2-training

./: CMakeLists.txt  package.xml
.git-old/: FETCH_HEAD  ORIG_HEAD  config  index
.git-old/logs/: HEAD
.git-old/logs/refs/heads/: master
.git-old/logs/refs/remotes/UWRT-Ros2-training/: master
.git-old/refs/heads/: master
action/: Software.action
include/ros-tut/: action.hpp  circle.hpp  publisher.hpp  reset.hpp  spawn.hpp
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/ros-tut/share/ament_index/resource_index/parent_prefix_path/: ros-tut
install/ros-tut/share/ros-tut/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/ros_tut/include/ros_tut/msg/: num.h  rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_fastrtps_cpp__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h
install/ros_tut/include/ros_tut/msg/detail/: num__rosidl_typesupport_fastrtps_c.h  num__rosidl_typesupport_fastrtps_cpp.hpp  num__rosidl_typesupport_introspection_c.h  num__struct.h
install/ros_tut/include/ros_tut/srv/: add_three_ints.h  success.hpp
install/ros_tut/include/ros_tut/srv/detail/: add_three_ints__functions.c  add_three_ints__functions.h  add_three_ints__rosidl_typesupport_introspection_c.h  add_three_ints__struct.h  add_three_ints__struct.hpp  add_three_ints__traits.hpp  add_three_ints__type_support.cpp  success__functions.c  success__rosidl_typesupport_introspection_c.h  success__rosidl_typesupport_introspection_cpp.hpp  success__struct.hpp  success__type_support.c  success__type_support.cpp  success__type_support.h
install/ros_tut/lib/ros_tut/: client  listener  server  talker
install/ros_tut/share/ament_index/resource_index/parent_prefix_path/: ros_tut
install/ros_tut/share/ament_index/resource_index/rclcpp_components/: ros_tut
install/ros_tut/share/ros_tut/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/ros_tut/share/ros_tut/cmake/: ament_cmake_export_include_directories-extras.cmake  ros_tutConfig.cmake  ros_tut__rosidl_generator_cppExport.cmake  ros_tut__rosidl_typesupport_cExport-noconfig.cmake  ros_tut__rosidl_typesupport_cExport.cmake  ros_tut__rosidl_typesupport_cppExport-noconfig.cmake  ros_tut__rosidl_typesupport_cppExport.cmake  ros_tut__rosidl_typesupport_introspection_cExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake
install/ros_tut/share/ros_tut/srv/: AddThreeInts.idl  Success.idl
log/: latest_build  latest_test
src/: action.cpp  circle.cpp  clear_turtles.cpp  my_node.cpp  publisher.cpp  reset.cpp  spawn.cpp
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/log/: latest_build
